--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="RoundImage">
+        <item name="android:background">@drawable/round_background</item>
+    </style>
+
+    <style name="ItemName">
+        <item name="android:textColor">@color/colorDarkGray</item>
+    </style>
+
+    <style name="ItemContent">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
