--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,11 @@
     <color name="colorAccent">#b5ffff</color>
     <color name="colorLight">#b5ffff</color>
 
+
+
     <color name="colorGray">#bdbdbd</color>
-    <color name="colorDarkGray">#373737</color>
+    <color name="colorDarkGray">#263238</color>
+
+    <color name="colorRed">#ff5252</color>
 
 </resources>
