--- a/app/src/main/res/layout/activity_create_edit_product.xml
+++ b/app/src/main/res/layout/activity_create_edit_product.xml
@@ -50,4 +50,12 @@
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/baseline_add_a_photo_white_24dp" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/product_fab_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_anchor="@id/product_edit_layout"
+        app:layout_anchorGravity="bottom|end"
+        app:srcCompat="@android:drawable/ic_menu_save" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
