--- a/app/src/main/res/layout/content_products_list.xml
+++ b/app/src/main/res/layout/content_products_list.xml
@@ -9,5 +9,5 @@
         android:id="@+id/products_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/item_products_list"/>
+        tools:listitem="@layout/item_product"/>
 </LinearLayout>
